Обобщение нескольких getTopSalaryStaff и getLowSalaryStaff в один метод getTopOrLowSalaryStaff Создание конкретного работника теперь выполняется через Generics Созданные ранее классы бросающие ошибки WrongCount.java и WrongNumber.java удалены